tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Abilities_Interests__c.field-meta.xml
<CustomField>
    <fullName>Abilities_Interests__c</fullName>
    <inlineHelpText>Client&apos;s abilities, skills, and interests.</inlineHelpText>
    <label>Abilities and Interests</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>