tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Active_Ideation_Plan_Intent__c.field-meta.xml
<CustomField>
    <fullName>Active_Ideation_Plan_Intent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Thoughts of killing oneself with details of plan fully or partially worked out and person has some intent to carry it out.
Have you started to work out or worked out the details of how to kill yourself? Did you intend to carry out this plan?</inlineHelpText>
    <label>Active Ideation - Plan/Intent</label>
    <type>Checkbox</type>
</CustomField>