tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Active_Ideation_Some_Intent_No_Plan__c.field-meta.xml
<CustomField>
    <fullName>Active_Ideation_Some_Intent_No_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Active suicidal thoughts of killing oneself and person reports having some intent to act on such thoughts, as opposed to “I have the thoughts but I definitely will not do anything about them.”</inlineHelpText>
    <label>Active Ideation - Some Intent/No Plan</label>
    <type>Checkbox</type>
</CustomField>