tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Active_Plan_Intent_Description__c.field-meta.xml
<CustomField>
    <fullName>Active_Plan_Intent_Description__c</fullName>
    <inlineHelpText>Have you started to work out or worked out the details of how to kill yourself? Did you intend to carry out this plan?
                                                                       
If yes, describe:</inlineHelpText>
    <label>Active Plan/Intent Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>