tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Active_Plan_Intent_Past_Month__c.field-meta.xml
<CustomField>
    <fullName>Active_Plan_Intent_Past_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you started to work out or worked out the details of how to kill yourself? Did you intend to carry out this plan?</inlineHelpText>
    <label>Active Plan/Intent Past Month</label>
    <type>Checkbox</type>
</CustomField>