tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Actual_Attempt_Past_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attempt_Past_3_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A potentially self-injurious act undertaken with at least some wish to die, as a result of act. Behavior was in part thought of as method to kill oneself. Intent does not have to be 100%.  If there is any intent/desire to die associated with the act, then it can be considered an actual suicide attempt. There does not have to be any injury or harm, just the potential for injury or harm. If person pulls trigger while gun is in mouth but gun is broken so no injury results, this is considered an attempt.</inlineHelpText>
    <label>Actual Attempt - Past 3 Months</label>
    <type>Checkbox</type>
</CustomField>