tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Advanced_Directives__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Directives__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Information about advance directives, healthcare proxy, or living will.</inlineHelpText>
    <label>Advanced Directives</label>
    <type>Checkbox</type>
</CustomField>