tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <inlineHelpText>Known allergies including medication, food, and environmental allergies.</inlineHelpText>
    <label>Allergies</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>