tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Alternative_Behaviors__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Behaviors__c</fullName>
    <inlineHelpText>Alternative behaviors to engage in instead of harmful coping mechanisms.</inlineHelpText>
    <label>Alternative Behaviors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>