tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Attempt_to_Harm_Self_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Attempt_to_Harm_Self_Lifetime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inferring Intent: Even if an individual denies intent/wish to die, it may be inferred clinically from the behavior or circumstances. For example, a highly lethal act that is clearly not an accident so no other intent but suicide can be inferred (e.g., gunshot to head, jumping from window of a high floor/story). Also, if someone denies intent to die, but they thought that what they did could be lethal, intent may be inferred.</inlineHelpText>
    <label>Attempt to Harm Self - Lifetime</label>
    <type>Checkbox</type>
</CustomField>