tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Attempt_to_Harm_Self_Past_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Attempt_to_Harm_Self_Past_3_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attempt to Harm Self - Past 3 Months</label>
    <type>Checkbox</type>
</CustomField>