tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Children_Details__c.field-meta.xml
<CustomField>
    <fullName>Children_Details__c</fullName>
    <inlineHelpText>Details about children (ages, custody arrangements, living situation).</inlineHelpText>
    <label>Children Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>