tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Chronic_Health_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Health_Conditions__c</fullName>
    <inlineHelpText>List of chronic health conditions affecting the client.</inlineHelpText>
    <label>Chronic Health Conditions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>