tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Chronic_Homelessness_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Homelessness_Qualifier__c</fullName>
    <inlineHelpText>Does this person meet HUD chronic homelessness criteria? (Disabled + 12+ months homeless or 4+ episodes in 3 years totaling 12+ months)</inlineHelpText>
    <label>Chronic Homelessness Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>