tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Clinical_Formulation__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Formulation__c</fullName>
    <inlineHelpText>Clinical formulation and case conceptualization.</inlineHelpText>
    <label>Clinical Formulation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>