tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Abuse_Relationship_Signs__c.field-meta.xml
<CustomField>
    <fullName>CLS_Abuse_Relationship_Signs__c</fullName>
    <inlineHelpText>I know how to identify if my relationships show signs of emotional, physical, or mental abuse.</inlineHelpText>
    <label>Relationship Abuse Signs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>