tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Budgeting_Planning__c.field-meta.xml
<CustomField>
    <fullName>CLS_Budgeting_Planning__c</fullName>
    <inlineHelpText>I plan for bills and other expenses that I must pay for regularly.</inlineHelpText>
    <label>Budgeting and Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>