tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Education_Program_Advice__c.field-meta.xml
<CustomField>
    <fullName>CLS_Education_Program_Advice__c</fullName>
    <inlineHelpText>I know where to find advice about how to choose an education program.</inlineHelpText>
    <label>Education Program Advice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>