tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Extended_Foster_Care__c.field-meta.xml
<CustomField>
    <fullName>CLS_Extended_Foster_Care__c</fullName>
    <inlineHelpText>I understand if I am eligible for extended foster care in my state after I am 18 years old.</inlineHelpText>
    <label>Extended Foster Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>