tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Food_Labels__c.field-meta.xml
<CustomField>
    <fullName>CLS_Food_Labels__c</fullName>
    <inlineHelpText>I understand why it is important to read and understand food labels for healthy eating.</inlineHelpText>
    <label>Food Labels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>