tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Internet_Safety__c.field-meta.xml
<CustomField>
    <fullName>CLS_Internet_Safety__c</fullName>
    <inlineHelpText>I know how to access information on the internet safely.</inlineHelpText>
    <label>Internet Safety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>