tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Job_Training_Research__c.field-meta.xml
<CustomField>
    <fullName>CLS_Job_Training_Research__c</fullName>
    <inlineHelpText>I know how to use reliable online platforms to find information about job training opportunities.</inlineHelpText>
    <label>Job Training Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>