tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Laundry__c.field-meta.xml
<CustomField>
    <fullName>CLS_Laundry__c</fullName>
    <inlineHelpText>I know how to use a washer, dryer, and detergent to clean my clothes.</inlineHelpText>
    <label>Laundry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>