tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Mental_Health_Coping__c.field-meta.xml
<CustomField>
    <fullName>CLS_Mental_Health_Coping__c</fullName>
    <inlineHelpText>I know how to positively manage my mental health when I am having a difficult day.</inlineHelpText>
    <label>Mental Health Coping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>