tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Online_Banking__c.field-meta.xml
<CustomField>
    <fullName>CLS_Online_Banking__c</fullName>
    <inlineHelpText>I understand how to use online banking to keep track of my money.</inlineHelpText>
    <label>Online Banking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>