tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Permanency_Goal__c.field-meta.xml
<CustomField>
    <fullName>CLS_Permanency_Goal__c</fullName>
    <inlineHelpText>I know my permanency goal, such as adoption, guardianship, independence, or return to home.</inlineHelpText>
    <label>Permanency Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>