tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Planner_Calendar__c.field-meta.xml
<CustomField>
    <fullName>CLS_Planner_Calendar__c</fullName>
    <inlineHelpText>I know how to use a planner, calendar, or phone to plan and keep track of important dates and assignments.</inlineHelpText>
    <label>Planner or Calendar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>