tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Proud_Life_Direction__c.field-meta.xml
<CustomField>
    <fullName>CLS_Proud_Life_Direction__c</fullName>
    <inlineHelpText>Most days, I feel proud of the way I am leading my life.</inlineHelpText>
    <label>Proud of Life Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>