tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Research_Skills__c.field-meta.xml
<CustomField>
    <fullName>CLS_Research_Skills__c</fullName>
    <inlineHelpText>I know how to research information to improve my own understanding of a topic.</inlineHelpText>
    <label>Research Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>