tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Respect_Differences__c.field-meta.xml
<CustomField>
    <fullName>CLS_Respect_Differences__c</fullName>
    <inlineHelpText>I know how to be respectful of people with different beliefs, opinions, and cultures.</inlineHelpText>
    <label>Respect Differences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>