tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Responsible_Civic_Voice__c.field-meta.xml
<CustomField>
    <fullName>CLS_Responsible_Civic_Voice__c</fullName>
    <inlineHelpText>I know how to share my views on news and politics responsibly.</inlineHelpText>
    <label>Responsible Civic Voice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>