tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Safe_Sex_Info__c.field-meta.xml
<CustomField>
    <fullName>CLS_Safe_Sex_Info__c</fullName>
    <inlineHelpText>I know where to get reliable information about safe sex and pregnancy.</inlineHelpText>
    <label>Safe Sex Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>