tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Support_System_Belief__c.field-meta.xml
<CustomField>
    <fullName>CLS_Support_System_Belief__c</fullName>
    <inlineHelpText>I believe I have a support system that will help me succeed.</inlineHelpText>
    <label>Support System Belief</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>