tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Transportation_Safety__c.field-meta.xml
<CustomField>
    <fullName>CLS_Transportation_Safety__c</fullName>
    <inlineHelpText>I know how to safely use public transportation or rideshare services to get where I need to go.</inlineHelpText>
    <label>Transportation Safety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>