tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/CLS_Work_Documents__c.field-meta.xml
<CustomField>
    <fullName>CLS_Work_Documents__c</fullName>
    <inlineHelpText>I know who to ask to get documents I need for work, such as a social security card, birth certificate, state ID, or work permit.</inlineHelpText>
    <label>Work Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Casey_Life_Skills</valueSetName>
    </valueSet>
</CustomField>