tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Comfortable_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Comfortable_Spaces__c</fullName>
    <inlineHelpText>Places or spaces where the person feels safe and comfortable.</inlineHelpText>
    <label>Comfortable Spaces</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>