tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Community_Familiarity__c.field-meta.xml
<CustomField>
    <fullName>Community_Familiarity__c</fullName>
    <inlineHelpText>How familiar is this person with the community where they will be living?</inlineHelpText>
    <label>Community Familiarity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Familiar</fullName>
            </value>
            <value>
                <fullName>Somewhat Familiar</fullName>
            </value>
            <value>
                <fullName>Not Familiar</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>