tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Community_Impact_Goals__c.field-meta.xml
<CustomField>
    <fullName>Community_Impact_Goals__c</fullName>
    <inlineHelpText>How do you want to impact your community?</inlineHelpText>
    <label>Community Impact Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>