tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Connection_Goals__c.field-meta.xml
<CustomField>
    <fullName>Connection_Goals__c</fullName>
    <inlineHelpText>Goals for building permanent connections and support systems.</inlineHelpText>
    <label>Connection Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>