tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Contributing_Factors_to_Homelessness__c.field-meta.xml
<CustomField>
    <fullName>Contributing_Factors_to_Homelessness__c</fullName>
    <inlineHelpText>Select all factors that contributed to this person becoming homeless.</inlineHelpText>
    <label>Contributing Factors to Homelessness</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sexual/Physical Abuse</fullName>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
            <value>
                <fullName>Relationship Issues with Family</fullName>
            </value>
            <value>
                <fullName>Aging Out of Foster Care</fullName>
            </value>
            <value>
                <fullName>Family Couldn&apos;t Afford Housing</fullName>
            </value>
            <value>
                <fullName>Eviction</fullName>
            </value>
            <value>
                <fullName>Job Loss/Unemployment</fullName>
            </value>
            <value>
                <fullName>Lost Housing Assistance</fullName>
            </value>
            <value>
                <fullName>Incarceration</fullName>
            </value>
            <value>
                <fullName>Mental Health Issues</fullName>
            </value>
            <value>
                <fullName>Physical Health Issues</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Death of Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Gender Identity/Sexual Orientation</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Immigration Status</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>