tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Controllability_of_Thoughts__c.field-meta.xml
<CustomField>
    <fullName>Controllability_of_Thoughts__c</fullName>
    <inlineHelpText>Could/can you stop thinking about killing yourself or wanting to die if you want to?</inlineHelpText>
    <label>Controllability of Thoughts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Controllability</valueSetName>
    </valueSet>
</CustomField>