tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Coping_Skills__c.field-meta.xml
<CustomField>
    <fullName>Coping_Skills__c</fullName>
    <inlineHelpText>Select all coping skills that help.</inlineHelpText>
    <label>Coping Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listening to music</fullName>
            </value>
            <value>
                <fullName>Being alone</fullName>
            </value>
            <value>
                <fullName>Talking to someone</fullName>
            </value>
            <value>
                <fullName>Going for a walk</fullName>
            </value>
            <value>
                <fullName>Deep breathing</fullName>
            </value>
            <value>
                <fullName>Drawing/Writing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>