tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Counseling_History__c.field-meta.xml
<CustomField>
    <fullName>Counseling_History__c</fullName>
    <inlineHelpText>History of counseling, therapy, or mental health treatment.</inlineHelpText>
    <label>Counseling History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>