tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Critical_Issues_Facing__c.field-meta.xml
<CustomField>
    <fullName>Critical_Issues_Facing__c</fullName>
    <inlineHelpText>Select all critical issues this person is currently facing.</inlineHelpText>
    <label>Critical Issues Facing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mental Health Issues</fullName>
            </value>
            <value>
                <fullName>Physical Disability</fullName>
            </value>
            <value>
                <fullName>Developmental Disability</fullName>
            </value>
            <value>
                <fullName>Chronic Health Condition</fullName>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>No Income</fullName>
            </value>
            <value>
                <fullName>Criminal Record/Justice Involvement</fullName>
            </value>
            <value>
                <fullName>Domestic Violence/Safety Concerns</fullName>
            </value>
            <value>
                <fullName>Lack of ID/Documentation</fullName>
            </value>
            <value>
                <fullName>Transportation Barriers</fullName>
            </value>
            <value>
                <fullName>Childcare Needs</fullName>
            </value>
            <value>
                <fullName>No Health Insurance</fullName>
            </value>
            <value>
                <fullName>Poor Credit/Rental History</fullName>
            </value>
            <value>
                <fullName>Language Barriers</fullName>
            </value>
            <value>
                <fullName>Trauma/PTSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>