tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Cultural_Background__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Background__c</fullName>
    <inlineHelpText>Client&apos;s cultural background, identity, and traditions.</inlineHelpText>
    <label>Cultural Background</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>