tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Cultural_Factors_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Factors_Treatment__c</fullName>
    <inlineHelpText>Cultural factors that may influence treatment approach or preferences.</inlineHelpText>
    <label>Cultural Factors in Treatment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>